--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #eee;
+  width: 100vw;  
+  height: 100vh;
+  overflow-y: hidden;
+}
+
+
 .App {
-  text-align: center;
+  /* background-color: #eee; */
+  padding: 0 20vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.searchmatch {
+  color: #8946A6;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Mario {
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
